app/nodejs/05-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: cnb-nodejs
spec:  
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: cnb-nodejs
