app/nodejs/06-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  name: nodejs  
spec:
  rules:
  - host: nodejs-kpackdemo.mytanzu.xyz
    http:
      paths:
      - backend:
          service:
            name: app
            port:
              name: http
        path: /
        pathType: Prefix
